--- a/buildscripts/resmokeconfig/suites/replica_sets_kill_secondaries_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_kill_secondaries_jscore_passthrough.yml
@@ -24,6 +24,9 @@ selector:
   - jstests/core/sortb.js
   - jstests/core/sortg.js
   - jstests/core/sortj.js
+  exclude_with_any_tags:
+  # emptycapped is not supported with rollback using recover-to-timestamp.
+  - requires_emptycapped
 
 executor:
   archive:
