Revert "SERVER-45453 Change name and usage of '$_internalJs' to '$function'"
This reverts commit 656313f6c949a5c49c42d080548067d5a8c37047.

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -103,8 +103,7 @@ env.Library(
 env.Library(
     target='expression_javascript',
     source=[
-        'expression_function.cpp',
-        'expression_js_emit.cpp'
+        'expression_javascript.cpp'
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/scripting/scripting_common',
