SERVER-46043 Remove genny_generate_all task from sys-perf wt_develop

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -942,6 +942,8 @@ buildvariants:
   expansions:
     <<: *compile-expansions
     compile-variant: -wtdevelop
+  tasks:
+    - name: compile
 
 - name: compile-rhel70
   display_name: Compile for Atlas-like
