SERVER-45807 Add change stream stage to fetch pre-image for update/replace/delete events
 create mode 100644 jstests/change_streams/lookup_pre_image.js
 create mode 100644 jstests/noPassthrough/change_stream_pre_image_lookup_whole_db_whole_cluster.js
 create mode 100644 jstests/noPassthrough/change_stream_preimages_fail_on_mongos.js
 create mode 100644 src/mongo/db/pipeline/document_source_lookup_change_pre_image.cpp
 create mode 100644 src/mongo/db/pipeline/document_source_lookup_change_pre_image.h

--- a/buildscripts/resmokeconfig/suites/change_streams_multi_stmt_txn_mongos_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/change_streams_multi_stmt_txn_mongos_passthrough.yml
@@ -15,6 +15,8 @@ selector:
   # These tests make assumptions about change stream results that are no longer true once operations
   # get bundled into transactions.
   - change_stream_does_not_expect_txns
+  # Exclude any that assume sharding is disabled
+  - assumes_against_mongod_not_mongos
 
 executor:
   archive:
