--- a/buildscripts/resmokeconfig/suites/change_streams_multi_stmt_txn_sharded_collections_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/change_streams_multi_stmt_txn_sharded_collections_passthrough.yml
@@ -15,6 +15,9 @@ selector:
   # These tests make assumptions about change stream results that are no longer true once operations
   # get bundled into transactions.
   - change_stream_does_not_expect_txns
+  # Exclude any tests that on't support sharding
+  - assumes_against_mongod_not_mongos,
+  - assumes_unsharded_collection
 
 executor:
   archive:
