--- a/buildscripts/resmokeconfig/suites/change_streams_sharded_collections_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/change_streams_sharded_collections_passthrough.yml
@@ -15,6 +15,9 @@ selector:
   - assumes_write_concern_unchanged
   # Transactions not supported on sharded clusters.
   - uses_transactions
+  # Exclude any that assume sharding is disabled
+  - assumes_against_mongod_not_mongos
+  - assumes_unsharded_collection
 
 executor:
   archive:
