--- a/buildscripts/resmokeconfig/suites/change_streams_whole_cluster_secondary_reads_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/change_streams_whole_cluster_secondary_reads_passthrough.yml
@@ -29,6 +29,8 @@ selector:
   - uses_transactions
   # Not relevant for whole-cluster change streams.
   - do_not_run_in_whole_cluster_passthrough
+  # Exclude any that assume sharding is disabled
+  - assumes_against_mongod_not_mongos
 
 executor:
   archive:
