--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -230,6 +230,7 @@ pipelineEnv.Library(
         'document_source_list_sessions.cpp',
         'document_source_lookup.cpp',
         'document_source_lookup_change_post_image.cpp',
+        'document_source_lookup_change_pre_image.cpp',
         'document_source_match.cpp',
         'document_source_merge.cpp',
         'document_source_out.cpp',
