--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1773,6 +1773,19 @@ env.Library(
     ],
 )
 
+env.Library(
+    target='mirroring_sampler',
+    source=[
+        'mirroring_sampler.cpp',
+    ],
+    LIBDEPS=[
+        "$BUILD_DIR/mongo/base",
+        "$BUILD_DIR/mongo/db/repl/replica_set_messages",
+        "$BUILD_DIR/mongo/rpc/protocol",
+        "$BUILD_DIR/mongo/util/net/network",
+    ],
+)
+
 envWithAsio = env.Clone()
 envWithAsio.InjectThirdParty(libraries=['asio'])
 
@@ -1797,6 +1810,7 @@ envWithAsio.CppUnitTest(
         'logical_session_cache_test.cpp',
         'logical_session_id_test.cpp',
         'logical_time_test.cpp',
+        'mirroring_sampler_test.cpp',
         'multi_key_path_tracker_test.cpp',
         'namespace_string_test.cpp',
         'op_observer_impl_test.cpp',
@@ -1823,6 +1837,7 @@ envWithAsio.CppUnitTest(
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
+        "$BUILD_DIR/mongo/bson/util/bson_extract",
         '$BUILD_DIR/mongo/client/read_preference',
         '$BUILD_DIR/mongo/db/auth/auth',
         '$BUILD_DIR/mongo/db/catalog/catalog_test_fixture',
@@ -1859,6 +1874,7 @@ envWithAsio.CppUnitTest(
         'logical_session_id',
         'logical_session_id_helpers',
         'logical_time',
+        'mirroring_sampler',
         'namespace_string',
         'op_observer',
         'op_observer_impl',
