--- a/src/mongo/db/storage/wiredtiger/SConscript
+++ b/src/mongo/db/storage/wiredtiger/SConscript
@@ -120,10 +120,26 @@ if wiredtiger:
     wtEnv.Library(
         target='storage_wiredtiger_mock',
         source=[
+            'wiredtiger_init.cpp',
+            'wiredtiger_options_init.cpp',
             'wiredtiger_record_store_mock.cpp',
+            'wiredtiger_server_status.cpp',
+            env.Idlc('wiredtiger_global_options.idl')[0],
             ],
         LIBDEPS=['storage_wiredtiger_core',
-             ]
+            'storage_wiredtiger_customization_hooks',
+            '$BUILD_DIR/mongo/db/db_raii',
+            '$BUILD_DIR/mongo/db/storage/storage_engine_impl',
+            '$BUILD_DIR/mongo/db/storage/storage_engine_lock_file',
+            '$BUILD_DIR/mongo/db/storage/storage_engine_metadata',
+        ],
+        LIBDEPS_PRIVATE=[
+            '$BUILD_DIR/mongo/db/catalog/database_holder',
+            '$BUILD_DIR/mongo/db/commands/server_status',
+            '$BUILD_DIR/mongo/db/concurrency/lock_manager',
+            '$BUILD_DIR/mongo/db/storage/storage_engine_common',
+            '$BUILD_DIR/mongo/util/options_parser/options_parser',
+        ]
         )
 
     wtEnv.CppUnitTest(
