--- a/src/mongo/db/storage/SConscript
+++ b/src/mongo/db/storage/SConscript
@@ -180,7 +180,6 @@ env.Library(
         'index_entry_comparison',
         'key_string',
     ],
-
 )
 
 env.Library(
@@ -201,25 +200,35 @@ env.Library(
         'record_store_test_truncate.cpp',
         'record_store_test_updaterecord.cpp',
         'record_store_test_updatewithdamages.cpp',
-        ],
+    ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/db/service_context',
         '$BUILD_DIR/mongo/db/storage/storage_options',
         '$BUILD_DIR/mongo/unittest/unittest',
-        ],
-    )
+    ],
+)
 
 
 env.Library(
     target='recovery_unit_test_harness',
     source=[
         'recovery_unit_test_harness.cpp'
-        ],
+    ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/db/service_context',
         '$BUILD_DIR/mongo/unittest/unittest',
-        ],
-    )
+    ],
+)
+
+env.Library(
+    target='storage_unittest_debug_util',
+    source=[
+        'storage_unittest_debug_util.cpp',
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/db/db_raii',
+    ],
+)
 
 env.Library(
     target='storage_engine_lock_file',
