--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5112,10 +5112,12 @@ tasks:
       num_tasks: 10
       jstestfuzz_vars: --jsTestsDir ../jstests
       suite: jstestfuzz_sharded_continuous_stepdown
+      # TODO(SERVER-44896): Remove enableTwoPhaseIndexBuild from server parameters when two phase
+      # index builds work with this flow control setting.
       resmoke_args: >-
           --flowControlTicketOverride=3
           --storageEngine=wiredTiger
-          --mongodSetParameters="{logComponentVerbosity: {command: 2}}"
+          --mongodSetParameters="{logComponentVerbosity: {command: 2}, enableTwoPhaseIndexBuild: false}"
       name: jstestfuzz_sharded_continuous_stepdown_flow_control
 
 ## jstestfuzz concurrent sharded cluster continuous stepdown with flow control engaged ##
@@ -5130,10 +5132,13 @@ tasks:
       num_tasks: 2
       jstestfuzz_vars: --jsTestsDir ../jstests
       suite: jstestfuzz_sharded_continuous_stepdown
+      # TODO(SERVER-44896): Remove enableTwoPhaseIndexBuild from server parameters when two phase
+      # index builds work with this flow control setting.
       resmoke_args: >-
           --flowControlTicketOverride=30
           --storageEngine=wiredTiger
           --numClientsPerFixture=10
+          --mongodSetParameters="{enableTwoPhaseIndexBuild: false}"
       name: jstestfuzz_concurrent_sharded_continuous_stepdown_flow_control
 
 # jstestfuzz replication continuous stepdown with flow control engaged #
@@ -5148,10 +5153,12 @@ tasks:
       num_tasks: 30
       jstestfuzz_vars: --jsTestsDir ../jstests
       suite: jstestfuzz_replication_continuous_stepdown
+      # TODO(SERVER-44896): Remove enableTwoPhaseIndexBuild from server parameters when two phase
+      # index builds work with this flow control setting.
       resmoke_args: >-
           --flowControlTicketOverride=1
           --storageEngine=wiredTiger
-          --mongodSetParameters="{logComponentVerbosity: {command: 2}}"
+          --mongodSetParameters="{logComponentVerbosity: {command: 2}, enableTwoPhaseIndexBuild: false}"
       name: jstestfuzz_replication_continuous_stepdown_flow_control
 
 ## jstestfuzz concurrent replication continuous stepdown with flow control engaged ##
@@ -5166,10 +5173,13 @@ tasks:
       num_tasks: 15
       jstestfuzz_vars: --jsTestsDir ../jstests
       suite: jstestfuzz_replication_continuous_stepdown
+      # TODO(SERVER-44896): Remove enableTwoPhaseIndexBuild from server parameters when two phase
+      # index builds work with this flow control setting.
       resmoke_args: >-
           --flowControlTicketOverride=10
           --storageEngine=wiredTiger
           --numClientsPerFixture=10
+          --mongodSetParameters="{enableTwoPhaseIndexBuild: false}"
       name: jstestfuzz_concurrent_replication_continuous_stepdown_flow_control
 
 ## jstestfuzz replica set ##
