--- a/src/mongo/db/s/SConscript
+++ b/src/mongo/db/s/SConscript
@@ -409,6 +409,7 @@ env.CppUnitTest(
         'collection_metadata_filtering_test.cpp',
         'collection_metadata_test.cpp',
         'collection_sharding_state_test.cpp',
+        'collection_sharding_runtime_test.cpp',
         'metadata_manager_test.cpp',
         'persistent_task_store_test.cpp',
         'persistent_task_queue_test.cpp',
