--- a/buildscripts/resmokeconfig/suites/replica_sets_multi_stmt_txn_terminate_primary_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_multi_stmt_txn_terminate_primary_jscore_passthrough.yml
@@ -60,6 +60,7 @@ selector:
   - jstests/core/sortf.js
   - jstests/core/sortg.js
   - jstests/core/sortj.js
+  - jstests/core/sort_with_meta_operator.js
   - jstests/core/tailable_skip_limit.js
   - jstests/core/type_array.js
   - jstests/core/uniqueness.js
