--- a/src/mongo/s/SConscript
+++ b/src/mongo/s/SConscript
@@ -175,6 +175,7 @@ env.Library(
         'chunk_version.cpp',
         'database_version_helpers.cpp',
         'shard_id.cpp',
+        'shard_invalidated_for_targeting_exception.cpp',
         'stale_exception.cpp',
         'would_change_owning_shard_exception.cpp',
         env.Idlc('catalog/type_chunk_base.idl')[0],
