SERVER-45966 Add ClientMetadataPropagationEgressHook for NetworkInterface used by ReplicaSetNodeProcessInterface

--- a/src/mongo/SConscript
+++ b/src/mongo/SConscript
@@ -372,6 +372,7 @@ mongod = env.Program(
         'db/catalog/document_validation',
         'db/catalog/health_log',
         'db/catalog/index_key_validate',
+        'db/client_metadata_propagation_egress_hook',
         'db/cloner',
         'db/collection_index_usage_tracker',
         'db/commands/mongod',
