--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1435,6 +1435,7 @@ functions:
         set +o errexit
         PATH="$path_value"                              \
             AWS_PROFILE=${aws_profile_remote}           \
+            RSK_is_asan_build=${is_asan_build|""}       \
             ${gcov_environment}                         \
             ${lang_environment}                         \
             ${san_options}                              \
@@ -3469,7 +3470,7 @@ functions:
 
         hang_analyzer_option="-o file -o stdout -p ${hang_analyzer_processes|dbtest,java,mongo,mongod,mongos,python,_test}"
 
-        if [ ${hang_analyzer_dump_core|true} = true ]; then
+        if [ ${is_asan_build|false} = false ]; then
           hang_analyzer_option="-c $hang_analyzer_option"
         fi
 
@@ -11482,7 +11483,6 @@ buildvariants:
     distros:
     - centos6-perf
   - name: buildscripts_test
-  - name: unittest_shell_hang_analyzer_gen
   - name: .causally_consistent !.sharding
   - name: .change_streams
   - name: .misc_js
@@ -11578,7 +11578,6 @@ buildvariants:
     distros:
     - centos6-perf
   - name: buildscripts_test
-  - name: unittest_shell_hang_analyzer_gen
   - name: .causally_consistent !.sharding
   - name: .change_streams
   - name: .misc_js
@@ -11782,7 +11781,7 @@ buildvariants:
     multiversion_platform: ubuntu1804
     multiversion_edition: enterprise
     resmoke_jobs_factor: 0.3  # Avoid starting too many mongod's under ASAN build.
-    hang_analyzer_dump_core: false
+    is_asan_build: true
     scons_cache_scope: shared
     test_flags: --excludeWithAnyTags=requires_fast_memory
   tasks:
@@ -11831,6 +11830,7 @@ buildvariants:
   - name: snmp
   - name: .watchdog
   - name: .stitch
+  - name: unittest_shell_hang_analyzer_gen
   - name: .updatefuzzer
   - name: server_discovery_and_monitoring_json_test_TG
 
@@ -11848,7 +11848,7 @@ buildvariants:
     multiversion_platform: ubuntu1804
     multiversion_edition: enterprise
     resmoke_jobs_factor: 0.3  # Avoid starting too many mongod's under ASAN build.
-    hang_analyzer_dump_core: false
+    is_asan_build: true
     scons_cache_scope: shared
     target_resmoke_time: 15
     test_flags: --excludeWithAnyTags=requires_fast_memory
@@ -11936,7 +11936,7 @@ buildvariants:
     san_options: UBSAN_OPTIONS="print_stacktrace=1" LSAN_OPTIONS="suppressions=etc/lsan.suppressions:report_objects=1" ASAN_OPTIONS=detect_leaks=1:check_initialization_order=true:strict_init_order=true:abort_on_error=1:disable_coredump=0:handle_abort=1
     compile_flags: --variables-files=etc/scons/mongodbtoolchain_v3_clang.vars --dbg=on --opt=on --allocator=system --sanitize=undefined,address --ssl -j$(grep -c ^processor /proc/cpuinfo) --nostrip
     resmoke_jobs_factor: 0.3  # Avoid starting too many mongod's under {A,UB}SAN build.
-    hang_analyzer_dump_core: false
+    is_asan_build: true
     scons_cache_scope: shared
   tasks:
   - name: compile_all_run_unittests_TG
@@ -11958,7 +11958,7 @@ buildvariants:
     san_options: UBSAN_OPTIONS="print_stacktrace=1:halt_on_error=1" LSAN_OPTIONS="suppressions=etc/lsan.suppressions:report_objects=1" ASAN_OPTIONS=detect_leaks=1:check_initialization_order=true:strict_init_order=true:abort_on_error=1:disable_coredump=0:handle_abort=1
     compile_flags: LINKFLAGS=-nostdlib++ LIBS=stdc++ --variables-files=etc/scons/mongodbtoolchain_v3_clang.vars --dbg=on --opt=on --allocator=system --sanitize=undefined,address,fuzzer --ssl -j$(grep -c ^processor /proc/cpuinfo) --nostrip
     resmoke_jobs_factor: 0.3  # Avoid starting too many mongod's under {A,UB}SAN build.
-    hang_analyzer_dump_core: false
+    is_asan_build: true
     scons_cache_scope: shared
   display_tasks:
   - *libfuzzertests
@@ -11981,7 +11981,7 @@ buildvariants:
     multiversion_platform: ubuntu1804
     multiversion_edition: enterprise
     resmoke_jobs_factor: 0.3  # Avoid starting too many mongod's under {A,UB}SAN build.
-    hang_analyzer_dump_core: false
+    is_asan_build: true
     test_flags: |- # Use the ServiceExecutorAdaptive with a reasonable number of starting threads
         --serviceExecutor=adaptive \
         --mongodSetParameters="adaptiveServiceExecutorReservedThreads: 8" \
