--- a/buildscripts/resmokeconfig/suites/search_ssl.yml
+++ b/buildscripts/resmokeconfig/suites/search_ssl.yml
@@ -6,7 +6,7 @@ test_kind: js_test
 
 selector:
   roots:
-  - src/mongo/db/modules/*/jstests/search_beta/*.js
+  - src/mongo/db/modules/*/jstests/search/ssl/*.js
 
 executor:
   config:
@@ -20,3 +20,8 @@ executor:
           roleGraphInvalidationIsFatal: true
       nodb: ''
       readMode: commands
+      ssl: ''
+      tlsAllowInvalidHostnames: ''
+      tlsAllowInvalidCertificates: ''
+      tlsCAFile: jstests/libs/ca.pem
+      tlsCertificateKeyFile: jstests/libs/client.pem
