--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -8211,30 +8211,30 @@ tasks:
                'destination': {'path': '${push_path}/mongodb-${push_name}-${push_arch}-debugsymbols-${suffix}.${ext|tgz}.md5', 'bucket': '${push_bucket}'}}
 
 - <<: *task_template
-  name: search_beta
+  name: search
   commands:
   - func: "do setup"
   - func: "run tests"
     vars:
-      resmoke_args: --suites=search_beta --storageEngine=wiredTiger
+      resmoke_args: --suites=search --storageEngine=wiredTiger
       resmoke_jobs_max: 1
 
 - <<: *task_template
-  name: search_beta_auth
+  name: search_auth
   commands:
   - func: "do setup"
   - func: "run tests"
     vars:
-      resmoke_args: --suites=search_beta_auth --storageEngine=wiredTiger
+      resmoke_args: --suites=search_auth --storageEngine=wiredTiger
       resmoke_jobs_max: 1
 
 - <<: *task_template
-  name: search_beta_ssl
+  name: search_ssl
   commands:
   - func: "do setup"
   - func: "run tests"
     vars:
-      resmoke_args: --suites=search_beta_ssl --storageEngine=wiredTiger
+      resmoke_args: --suites=search_ssl --storageEngine=wiredTiger
       resmoke_jobs_max: 1
 
 - name: shared_scons_cache_pruning
@@ -9774,9 +9774,9 @@ buildvariants:
   - name: .read_only
   - name: .rollbackfuzzer
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: session_jscore_passthrough
   - name: .sharding .jscore !.wo_snapshot !.multi_stmt
   - name: .sharding .txns
@@ -9928,9 +9928,9 @@ buildvariants:
   - name: .read_only
   - name: .rollbackfuzzer
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: secondary_reads_passthrough_gen
   - name: session_jscore_passthrough
   # Sharded transactions suites exclude tests that use snapshot read concern, since snapshot read
@@ -10041,9 +10041,9 @@ buildvariants:
   - name: .retry
   - name: .rollbackfuzzer
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: secondary_reads_passthrough_gen
   - name: session_jscore_passthrough
   - name: .sharding .jscore !.wo_snapshot
@@ -10171,9 +10171,9 @@ buildvariants:
     - name: .rollbackfuzzer
     - name: retryable_writes_jscore_passthrough_gen
     - name: sasl
-    - name: search_beta
-    - name: search_beta_auth
-    - name: search_beta_ssl
+    - name: search
+    - name: search_auth
+    - name: search_ssl
     - name: secondary_reads_passthrough_gen
     - name: session_jscore_passthrough
     - name: .sharding .jscore !.wo_snapshot
@@ -10225,9 +10225,9 @@ buildvariants:
   - name: replica_sets_jscore_passthrough
   - name: .replica_sets .multi_oplog
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: sharding_auth_audit_gen
   - name: sharding_auth_gen
   - name: snmp
@@ -10281,9 +10281,9 @@ buildvariants:
   - name: replica_sets_jscore_passthrough
   - name: .replica_sets .multi_oplog
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: sharding_auth_audit_gen
   - name: sharding_auth_gen
   - name: snmp
@@ -10355,9 +10355,9 @@ buildvariants:
   - name: replica_sets_jscore_passthrough
   - name: .replica_sets .multi_oplog
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: sharding_auth_audit_gen
   - name: sharding_auth_gen
   - name: snmp
@@ -11522,9 +11522,9 @@ buildvariants:
   - name: .read_only
   - name: .rollbackfuzzer
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: session_jscore_passthrough
   - name: .sharding .jscore !.wo_snapshot !.multi_stmt
   - name: .sharding .txns
@@ -11618,9 +11618,9 @@ buildvariants:
   - name: .read_only
   - name: .rollbackfuzzer
   - name: sasl
-  - name: search_beta
-  - name: search_beta_auth
-  - name: search_beta_ssl
+  - name: search
+  - name: search_auth
+  - name: search_ssl
   - name: session_jscore_passthrough
   - name: .sharding .jscore !.wo_snapshot !.multi_stmt
   - name: .sharding .txns
