SERVER-45962 feature flag to opt out of new RSM implementation

--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -194,7 +194,10 @@ clientDriverEnv.Library(
         env.Idlc('global_conn_pool.idl')[0],
         'replica_set_change_notifier.cpp',
         'replica_set_monitor.cpp',
+        'scanning_replica_set_monitor.cpp',
+        'streamable_replica_set_monitor.cpp',
         'replica_set_monitor_manager.cpp',
+        env.Idlc('replica_set_monitor_params.idl')[0],
         'server_ping_monitor.cpp',
     ],
     LIBDEPS=[
@@ -304,16 +307,17 @@ env.CppUnitTest(
         'authenticate_test.cpp',
         'connection_string_test.cpp',
         'dbclient_cursor_test.cpp',
+        'disable_streamable_rsm_flag_test.cpp',
         'fetcher_test.cpp',
         'index_spec_test.cpp',
         'mongo_uri_test.cpp',
         'read_preference_test.cpp',
         'remote_command_retry_scheduler_test.cpp',
-        'replica_set_monitor_internal_test.cpp',
-        'replica_set_monitor_read_preference_test.cpp',
-        'replica_set_monitor_scan_test.cpp',
-        'replica_set_monitor_test_concurrent.cpp',
-        'replica_set_monitor_test_fixture.cpp',
+        'scanning_replica_set_monitor_internal_test.cpp',
+        'scanning_replica_set_monitor_read_preference_test.cpp',
+        'scanning_replica_set_monitor_scan_test.cpp',
+        'scanning_replica_set_monitor_test_concurrent.cpp',
+        'scanning_replica_set_monitor_test_fixture.cpp',
         'server_ping_monitor_test.cpp',
     ],
     LIBDEPS=[
