SERVER-46082 Use bin/analysis.py for performance projects
fix

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -336,6 +336,16 @@ functions:
 
   "analyze":
     - command: shell.exec
+      type: test
+      params:
+        working_dir: work
+        script: |
+          set -o verbose
+          source ./dsienv.sh
+          ../src/dsi/dsi/run-dsi analysis.py
+          # detect outliers needs to run, so defer the post_run_check exit status to later
+          echo $? > post_run_check.status
+    - command: shell.exec
       params:
         working_dir: work
         silent: true
@@ -357,17 +367,6 @@ functions:
           set -o verbose
           source ./signal_processing_venv/bin/activate
           detect-changes --evergreen-api-config .evergreen.yml
-    - command: shell.exec
-      type: test
-      params:
-        working_dir: work
-        script: |
-          set -o verbose
-          TAG="4.0.2-Baseline"
-          OVERRIDEFILE="../src/dsi/dsi/analysis/${branch_name}/system_perf_override.json"
-          python -u ../src/dsi/dsi/analysis/post_run_check.py ${script_flags} --reports-analysis reports --perf-file perf.json --rev ${revision} --refTag $TAG --overrideFile $OVERRIDEFILE --project_id sys-perf --variant ${build_variant} --task ${task_name}
-          # detect outliers needs to run, so defer the post_run_check exit status to later
-          echo $? > post_run_check.status
     - command: shell.exec
       params:
         working_dir: work
