SERVER-46082 Use bin/analysis.py for performance projects
(cherry picked from commit e594e572c3d1b30948058523b629185c1ef94f14)
(cherry picked from commit 37bdcc9339dab2d1a9d7c4825822cae33f25296d)
(cherry picked from commit f75e109e3dba2164b6a7a5b16c87f4552f4a7fb5)

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -291,6 +291,16 @@ functions:
 
   "analyze":
     - command: shell.exec
+      type: test
+      params:
+        working_dir: work
+        script: |
+          set -o verbose
+          source ./dsienv.sh
+          ../src/dsi/dsi/run-dsi analysis.py
+          # detect outliers needs to run, so defer the post_run_check exit status to later
+          echo $? > post_run_check.status
+    - command: shell.exec
       params:
         working_dir: work
         script: |
@@ -304,18 +314,6 @@ functions:
           evergreen_api_user=${evergreen_api_user}
           source ../src/buildscripts/signal_processing_setup.sh
           detect-changes --evergreen-api-config .evergreen.yml
-    - command: shell.exec
-      type : test
-      params:
-        working_dir: work
-        script: |
-          set -o errexit
-          set -o verbose
-          TAG="3.4.14-Baseline"
-          OVERRIDEFILE="../src/dsi/dsi/analysis/${branch_name}/system_perf_override.json"
-          python -u ../src/dsi/dsi/analysis/post_run_check.py ${script_flags} --reports-analysis reports --perf-file perf.json --rev ${revision} --refTag $TAG --overrideFile $OVERRIDEFILE --project_id sys-perf --variant ${build_variant} --task ${task_name}
-          # detect outliers needs to run, so defer the post_run_check exit status to later
-          echo $? > post_run_check.status
     - command: shell.exec
       params:
         working_dir: work
