--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -53,6 +53,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/rollback_dup_ids_clean_shutdown_during_rollback.js
 - ticket: SERVER-45906
   test_file: jstests/replsets/trigger_initial_stable_checkpoint.js
+- ticket: SERVER-45178
+  test_file: jstests/replsets/rollback_via_refetch_update_rollback_id_before_oplog_truncation.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
