--- a/src/mongo/tools/SConscript
+++ b/src/mongo/tools/SConscript
@@ -31,3 +31,6 @@ mongobridge = env.Program(
     ],
     AIB_COMPONENT='dist-test',
 )
+
+if get_option("install-mode") != "hygienic":
+    env.Install("#/", mongobridge)
