SERVER-46188 Blacklist write_conflicts_with_non_txns.js from sharded core transaction passthrough suites
(cherry picked from commit 3e8fea7b03c7cb7fbed5e68714b0f3cfd663016c)

--- a/buildscripts/resmokeconfig/suites/sharded_causally_consistent_jscore_txns_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_causally_consistent_jscore_txns_passthrough.yml
@@ -39,6 +39,9 @@ selector:
   # attached to statements in a transaction beyond the first one.
   - jstests/core/txns/non_transactional_operations_on_session_with_transaction.js
 
+    # TODO SERVER-46187: maxTimeMS doesn't work correctly for insert on mongos.
+  - jstests/core/txns/write_conflicts_with_non_txns.js
+
   exclude_with_any_tags:
   - does_not_support_causal_consistency
   # Transactions are not allowed to operate on capped collections.
