--- a/buildscripts/resmokeconfig/suites/sharded_jscore_txns.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_jscore_txns.yml
@@ -35,6 +35,9 @@ selector:
   # Uses hangAfterCollectionInserts failpoint not available on mongos.
   - jstests/core/txns/speculative_snapshot_includes_all_writes.js
 
+  # TODO SERVER-46187: maxTimeMS doesn't work correctly for insert on mongos.
+  - jstests/core/txns/write_conflicts_with_non_txns.js
+
   exclude_with_any_tags:
   # Transactions are not allowed to operate on capped collections.
   - requires_capped
