SERVER-43889 Distinguish between retryable write and transaction when failing a command
(cherry picked from commit eb284b042c71edf0eac445d3ceb79f7fdeabc5d1)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -55,6 +55,8 @@ replica_sets_multiversion:
 sharding_multiversion:
 - ticket: SERVER-38691
   test_file: jstests/sharding/explain_cmd.js
+- ticket: SERVER-43889
+  test_file: jstests/sharding/retryable_writes.js
 
 sharding_jscore_multiversion_passthrough:
 
